DZ_9_kuber-homeworks/2.3/src/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-multitool
 namespace: netology
 labels:
   app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:

      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: configmap-ngmul
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes:
      - name: configmap-ngmul
        configMap:
          name: nginx-cm
