DZ_9_kuber-homeworks/2.3/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: netology
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 1111
