DZ_9_kuber-homeworks/2.3/src/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-2
  namespace: netology
spec:
  selector:
    app: nginx2
  ports:
    - protocol: TCP
      name: nginx2
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
